# coordinate-projector

./: CHANGES.md  README.md  azure-pipelines.yml  mypy.ini  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
src/coordinate_projector/: __init__.py  datetime_parser.py  projections.json  projections.py  projector.py
src/ngi_projecter/: __init__.py  projecter.py  projections.py
src/ngi_projector/: __init__.py  datetime_parser.py  projections.py  projector.py
tests/: test_datetime.py  test_projecter.py  test_projector.py  test_sweref99.py  test_twd97.py
tests/data/: coords.py
