[project]
name = "coordinate-projector"
version = "0.0.13"
description = "Project points from one projection to another using pyproj"
authors = [
    { name = "Helge Smebye" },
    { name = "Jostein Leira", email = "jostein@leira.net" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Jostein Leira", email = "jostein@leira.net" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pyproj>=3.6.1,<4",
    "python-dateutil>=2.8.2,<3",
    "types-python-dateutil>=2.8.19,<3",
    "timezonefinder",
]

[project.urls]
Homepage = "https://github.com/norwegian-geotechnical-institute/coordinate-projector"
Repository = "https://github.com/norwegian-geotechnical-institute/coordinate-projector"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | venv
  | \.venv
  | env
  | \.env
  | _build
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "bandit",
    "safety",
    "pip-licenses-cli",
    "ruff",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.hatch.build.targets.sdist]
include = ["src/coordinate_projector"]

[tool.hatch.build.targets.wheel]
include = ["src/coordinate_projector"]

[tool.hatch.build.targets.wheel.sources]
"src/coordinate_projector" = "coordinate_projector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
